--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="plant">
-    <div>
+    <div id = "plant-form">
       <h1 class="title-form">Find the perfect plant for you</h1>
       <form id="plantForm" class="form">
         <div class="answer-group">
