cleaning code and start observer

--- a/customize.html
+++ b/customize.html
@@ -1,15 +1,15 @@
 <h1 class="title-form">Plant Pot Form</h1>
 <form id="plantForm" class="form">
   <div class="answer-group">
-    <p class="question-text">Choose your pot:</p>
+    <p class="question-text-customize label">Choose your pot:</p>
     <input type="radio" name="pot" value="Clay" id="pot-clay">
-    <label for="pot-clay" class="question-text">Clay</label>
+    <label for="pot-clay" class="question-text-customize label">Clay</label>
     <input type="radio" name="pot" value="Ceramic" id="pot-ceramic">
-    <label for="pot-ceramic" class="question-text">Ceramic</label>
+    <label for="pot-ceramic" class="question-text-customize label">Ceramic</label>
   </div>
     <div class="answer-group">
       <p>Pot decorations:</p>
-      <label class="switch question-text">
+      <label class="switch question-text-customize label">
         <input type="checkbox" checked>
         <span class="slider round"></span>
       </label>
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="answer-group">
-        <p class="question-text">Choose your plant:</p>
+        <p class="question-text-customize label">Choose your plant:</p>
         <select name="plant">
           <option value="Aglaonema Silver Bay">Aglaonema Silver Bay</option>
           <option value="Aloe Vera">Aloe Vera</option>
@@ -38,20 +38,20 @@
     <div class="answer-group">
       <p>Choose your soil:</p>
       <input type="radio" name="soil" value="Basic composted soil" id="soil-basic">
-      <label for="soil-basic" class="question-text">Basic composted soil</label>
+      <label for="soil-basic" class="question-text-customize label">Basic composted soil</label>
       <input type="radio" name="soil" value="Premium fertilized soil" id="soil-premium">
-      <label for="soil-premium" class="question-text">Premium fertilized soil</label>
+      <label for="soil-premium" class="question-text-customize label">Premium fertilized soil</label>
       <input type="radio" name="soil" value="Easy drainage soil" id="soil-drainage">
       <label for="soil-drainage">Easy drainage soil</label>
     </div>
     <div class="answer-group">
       <p>Choose your extras:</p>
       <input type="checkbox" name="extras" value="Moss pole" id="extras-moss">
-      <label for="extras-moss" class="question-text">Moss pole</label>
+      <label for="extras-moss" class="question-text-customize label">Moss pole</label>
       <input type="checkbox" name="extras" value="Pebbles" id="extras-pebbles">
-      <label for="extras-pebbles" class="question-text">Pebbles</label>
+      <label for="extras-pebbles" class="question-text-customize label">Pebbles</label>
       <input type="checkbox" name="extras" value="Smaller plants" id="extras-plants">
-      <label for="extras-plants" class="question-text">Smaller plants</label>
+      <label for="extras-plants" class="question-text-customize label">Smaller plants</label>
     </div>
   <button class=" btn btn-bg" type="submit" value="Submit">Submit</button>
 </form>
