update custome form func and styles

--- a/customize.html
+++ b/customize.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body> -->
-  <h1 class="title-form">Plant Pot Form</h1>
+  <h1 class="title-form">Customize your plant!</h1>
 <form id="plantForm" class="form">
   <div class="answer-group">
     <p class="question-text-customize label">Choose your pot:</p>
@@ -26,11 +26,11 @@
   <div class="answer-group">
     <div id="containerColors">
       <p>Pot color:</p>
-      <label class="color-option blue"><input type="radio" name="color" value="blue">Blue</label>
-      <label class="color-option pink"><input type="radio" name="color" value="pink">Pink</label>
-      <label class="color-option green"><input type="radio" name="color" value="green">Green</label>
-      <label class="color-option purple"><input type="radio" name="color" value="purple">Purple</label>
-      <label class="color-option unpainted"><input type="radio" name="color" value="unpainted">Unpainted</label>
+      <label class="color-option blue"><input type="radio" name="color" value="blue"></label>
+      <label class="color-option pink"><input type="radio" name="color" value="pink"></label>
+      <label class="color-option green"><input type="radio" name="color" value="green"></label>
+      <label class="color-option purple"><input type="radio" name="color" value="purple"></label>
+      <label class="color-option unpainted"><input type="radio" name="color" value="unpainted"></label>
     </div>
   </div>  
   <div class="answer-group">
